--- a/fe/src/app/booking/calendar-dialog/calendar-dialog.html
+++ b/fe/src/app/booking/calendar-dialog/calendar-dialog.html
@@ -39,7 +39,7 @@
                 </div> -->
               </div>
             </div>
-            <div class="calender-pick-info" *ngIf="pickServiceType != 1 && dateArray && dateArray.length > 0">
+            <div class="calender-pick-info" *ngIf="dateArray && dateArray.length > 0">
               <p class="showTime title_note" *ngIf="true">* Thông tin lịch định kỳ (ngày bắt đầu dịch vụ):</p>
               <div>{{
                 datePickerShow
