update lại màn danh sách người dùng

--- a/fe/src/app/customer/list-customer/list-customer.component.html
+++ b/fe/src/app/customer/list-customer/list-customer.component.html
@@ -34,14 +34,14 @@
     <div class="col">
       <div class="card shadow">
         <div class="card-header border-0">
-          <h3 class="mb-0 font20">Danh sách nhân viên dọn dẹp</h3>
+          <h3 class="mb-0 font20">Danh sách Người dùng trên hệ thống</h3>
         </div>
         <div class="table-responsive">
           <table class="table align-items-center table-flush">
             <thead class="thead-light">
               <tr>
                 <th scope="col">Tên người dùng</th>
-                <th scope="col">Ngày sinh</th>
+                <!-- <th scope="col">Ngày sinh</th> -->
                 <th scope="col">Giới tính</th>
                 <th scope="col">Address</th>
                 <th scope="col">Đơn đã đặt</th>
@@ -60,18 +60,18 @@
                     </div>
                   </div>
                 </th>
-                <td>
+                <!-- <td>
                   {{customer.dob}}
-                </td>
+                </td> -->
                 <td>
                   {{customer.gender}}
                 </td>
                 <td>
                   {{customer.address}}
                 </td>
-                <td>
+                <!-- <td>
                   {{customer.totalBooking}}
-                </td>
+                </td> -->
                 <td class="text-right">
                   <div ngbDropdown placement="bottom-right">
                     <a class="btn btn-sm btn-icon-only text-light" ngbDropdownToggle>
