--- a/fe/src/app/booking/pick-cleaner-dialog/pick-cleaner-dialog.html
+++ b/fe/src/app/booking/pick-cleaner-dialog/pick-cleaner-dialog.html
@@ -6,8 +6,8 @@
     <div class="content">
       <div class="content-scroll">
         <div class="filter-search">Tên: <input #namesearch id="namesearch" placeholder="Tên nhân viên" type="text"
-            aria-describedby="name-search-help" maxlength="50" [value]="searchname"><span>
-            <button mat-button class="filter_btn" (click)="searchCleaner(searchname)">Tìm kiếm</button>
+            aria-describedby="name-search-help" maxlength="50" [(ngModel)]="searchname"><span>
+            <button mat-button class="filter_btn" (click)="searchCleaner()">Tìm kiếm</button>
             <div class="error" *ngIf="noDataSearch"> *không có tên nhân viên dọn dẹp tương ứng</div>
           </span></div>
       </div>
@@ -20,7 +20,7 @@
         <div class="showtime-options" *ngIf="listPick.length > 0">
           <div style="margin-top: 2rem; font-size: 14px;">Các nhân viên dọn dẹp đã được chọn:</div>
           <!-- listPick.length > 0  -->
-          <div class="select-date-container" style="margin-top: -20px;" height="140px" *ngIf="listPick.length > 0">
+          <div class="select-date-container" style="margin-top: 0 !important; height: 210px !important;" *ngIf="listPick.length > 0">
             <div class="datetimeBtn"  *ngFor="let cleaner of listPick, let i = index">
               <i class="add-icon fas fa-times closeIcon" (click)="removeCleaner(i)"></i>
               <div class="top">
@@ -40,15 +40,14 @@
           </div>
         </div>
         <!-- listPick.length > 0  -->
-        <hr *ngIf="true">
+        <hr *ngIf="listA.length > 0">
         <div class="showtime-options" *ngIf="listA.length > 0">
           <div style="margin-top: 1rem;" class="list-title">Danh sách nhân viên dọn dẹp sẵn sàng đối với lịch dọn của
             bạn:</div>
           <div class="error">(*Danh sách nhân viên sẽ thay đổi nếu khách hàng thay đổi lịch dọn)</div>
-          <!-- listCleaner.length < 6 && listCleaner.length > 0 -->
           <div class="select-date-container"  style="margin-top: -20px;" height="140px" *ngIf="listA.length > 0" style="padding-top: -1rem;">
-            <div class="datetimeBtn" *ngFor="let cleanerA of listA">
-              <i class="add-icon fas fa-plus addIcon" (click)="addCleaner(cleanerA)"></i>
+            <div class="datetimeBtn" *ngFor="let cleanerA of listA, let i = index">
+              <i class="add-icon fas fa-plus addIcon" (click)="addCleaner(cleanerA, i)"></i>
               <div class="top">
                 <img src="../hms/assets/img/{{cleanerA.gender}}.jpg">
               </div>
@@ -65,28 +64,7 @@
             </div>
           </div>
         </div>
-        <!-- listCleaner.length < 11 && listCleaner.length > 5 -->
-        <div class="showtime-options" *ngIf="listB.length > 0">
-          <!-- listCleaner.length < 11 && listCleaner.length > 5 -->
-          <div class="select-date-container" height="140px" *ngIf="listB.length > 0">
-            <div class="datetimeBtn"  *ngFor="let cleanerB of listB">
-              <i class="add-icon fas fa-plus addIcon" (click)="addCleaner(cleanerB)"></i>
-              <div class="top">
-                <img src="../hms/assets/img/{{cleanerB.gender}}.jpg">
-              </div>
-              <div class="bottom" (click)="viewDetailCleaner(cleanerB.cleanerId)">
-                <div class="cleaner-name">{{cleanerB.name}}
-                  <div style="font-size: 13px;"> Giới tính: {{cleanerB.gender == 'Male' ? 'Nam' : 'Nữ' }} </div>
-                </div>
-                <div class="align-items-center">
-                  <span class="mr-2" *ngIf="cleanerB.averageRating != 0">{{cleanerB.averageRating}}</span>
-                  <span class="star-rating"
-                    [innerHTML]="generateStarRating(cleanerB.averageRating) + ' (' + cleanerB.ratingNumber + ')'"> </span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        
       </div>
       <div class="button-submit">
         <button mat-button class="btn" (click)="pickCleaner()">Xác nhận</button>
