--- a/fe/src/app/booking/pick-cleaner-dialog/pick-cleaner-dialog.scss
+++ b/fe/src/app/booking/pick-cleaner-dialog/pick-cleaner-dialog.scss
@@ -1448,7 +1448,7 @@
   // background-color: #232323;
   max-width: 960px;
   height: 250px;
-  margin: -10px 30px 0 30px;
+  margin: -10px 20px 0 20px;
   // padding: 1.4rem;
   label {
     margin-bottom: -2rem !important;
@@ -1536,10 +1536,11 @@
   .select-date-container {
     overflow: hidden;
     width: 95%;
-    height: 220px;
+    height: 440px;
     display: flex;
     // cursor: grab;
-    margin: -10px 60px 0 60px;
+    margin: 10px 30px 0 30px;
+    flex-wrap: wrap;
     // padding: 1.4rem;
 
     .datetimeBtn {
@@ -1548,10 +1549,11 @@
       height: 180px;
       width: 150px !important;
       border: 1px solid #000 !important;
-      margin: 32px 12px 32px 0px;
+      margin: 12px 12px 12px 0px;
       color: #795200;
       text-align: center;
       position: relative;
+      flex: 0 0 17%;
 
       &:hover {
         box-shadow: 1px 1px 1px 1px #ddd;
@@ -1663,7 +1665,7 @@ h6 {
   background: #fff;
   border-radius: 0 0 3px 3px;
   padding: 10px 20px 20px 20px;
-  height: calc(100vh - 250px); 
+  // height: calc(100vh - 250px); 
   overflow-x: hidden;
   overflow-y: auto;
   min-height: 325px !important;
