--- a/fe/src/app/auth/login/login.component.html
+++ b/fe/src/app/auth/login/login.component.html
@@ -47,7 +47,7 @@
                       (blur)="changeHandler('account')" (focus)="focusAccount()" placeholder="name@email.com"
                       type="text" aria-describedby="email-help" maxlength="50" [(ngModel)]="account_name">
                   </div>
-                  <div *ngIf="account_name" class="delete" (click)="clearEmail()">
+                  <div *ngIf="account_name && account_wrong" class="delete" (click)="clearEmail()">
                     <img style="float: right;" src="assets/img/close.svg" />
                   </div>
                 </div>
