--- a/fe/src/app/booking/booking.component.html
+++ b/fe/src/app/booking/booking.component.html
@@ -242,6 +242,10 @@
                     [class.disabled]=" !termAndCondition || !account_name || !phone_number || !address || !(pickDay || dateValue)">
                     Đặt lịch
                   </button>
+                  <button class="btn btn-primary btn-pay" (click)="viewBill()"
+                    >
+                    Bill Draft
+                  </button>
                 </div>
 
               </div>
