--- a/fe/src/app/employee/tables.component.html
+++ b/fe/src/app/employee/tables.component.html
@@ -70,9 +70,16 @@
   <div class="row">
     <div class="col">
       <div class="card shadow">
-        <div class="card-header border-0">
-          <h3 class="mb-0 font20">Danh sách nhân viên dọn dẹp</h3>
-        </div>
+        <div class="card-header border-0" style="padding-top: 1rem; padding-bottom: 1rem;">
+            <div class="row align-items-center">
+              <div class="col-8">
+                <h3 class="mb-0">Danh sách nhân viên dọn dẹp</h3>
+              </div>
+              <div class="col-2 text-right">
+                <button style="font-size: 13px;" type="button" class="btn btn-primary mt-4" (click)="addCleaner()">Thêm Nhân viên dọn</button>
+              </div>
+            </div>
+          </div>          
         <div class="table-responsive">
           <table class="table align-items-center table-flush">
             <thead class="thead-light">
