--- a/fe/src/app/shared/sidebar/sidebar.component.html
+++ b/fe/src/app/shared/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<nav *ngIf="cleanerNavbar || managerNavbar || adminNavbar" class="navbar navbar-vertical navbar-expand-md navbar-light bg-white" id="sidenav-main">
+<nav *ngIf="cleanerNavbar || managerNavbar || adminNavbar ||leadNavbar" class="navbar navbar-vertical navbar-expand-md navbar-light bg-white" id="sidenav-main">
   <div class="container-fluid">
     <!-- Toggler -->
     <button class="navbar-toggler" type="button" (click)="isCollapsed=!isCollapsed"
