--- a/fe/src/app/shared/footer/footer.component.html
+++ b/fe/src/app/shared/footer/footer.component.html
@@ -10,10 +10,10 @@
           <i class="fa fa-twitter"></i>
         </a>
         <a target="_blank" href="https://www.facebook.com" class="btn btn-neutral btn-icon-only btn-facebook btn-round btn-lg" ngbTooltip="Join us">
-          <i class="fa fa-facebook-square"></i>
+          <i class="fas fa-facebook-f"></i>
         </a>
         <a target="_blank" href="https://instagram.com" class="btn btn-neutral btn-icon-only btn-github btn-round btn-lg" ngbTooltip="Like us ">
-          <i class="fa fa-instagram"></i>
+          <i class="fas fa-instagram"></i>
         </a>
         <a target="_blank" href="https://youtube.com" class="btn btn-neutral btn-icon-only btn-dribbble btn-lg btn-round" ngbTooltip="Watch us">
           <i class="fa fa-youtube"></i>
