--- a/fe/src/app/home/home.component.html
+++ b/fe/src/app/home/home.component.html
@@ -19,12 +19,12 @@
         <div class="col px-0">
           <div class="row align-items-center justify-content-center">
             <div class="col-lg-6 text-center">
-              <img src="./assets/img/brand/argon-white.png" style="width: 200px;" class="img-fluid">
+              <img src="./assets/img/brand/hms.png" style="width: 200px;" class="img-fluid">
               <p class="lead text-white">Chúng tôi luôn tự hào là nhà cung cấp dịch vụ dọn dẹp tốt và tối ưu nhất</p>
               <div class="btn-wrapper mt-5">
                 <a href="" class="btn btn-lg btn-white btn-icon mb-3 mb-sm-0">
-                  <span class="btn-inner--icon"><i class="ni ni-cloud-download-95"></i></span>
-                  <span class="btn-inner--text">Trải nghiệm ngay</span>
+                  <span class="btn-inner--icon"><i class="fas fa-check"></i></span>
+                  <span class="btn-inner--text" [routerLink]="['/booking']">Đặt dịch vụ</span>
 
                 </a>
               </div>
