--- a/fe/src/app/introduction/introduction.component.html
+++ b/fe/src/app/introduction/introduction.component.html
@@ -20,7 +20,7 @@
               <h1 class="display-3  text-white">Dịch vụ vệ sinh
                 <!-- <span>completed with examples</span> -->
               </h1>
-              <p class="lead  text-white">Dịch vụ vệ sinh của HSM có đa dạng các loại hình tiện ích, hình thức phù hợp
+              <p class="lead  text-white">Dịch vụ vệ sinh của HMS có đa dạng các loại hình tiện ích, hình thức phù hợp
                 cho nhu cầu dọn dẹp của khách hàng.</p>
               <div class="btn-wrapper">
                 <a [routerLink]="['/booking']" class="btn btn-info btn-icon mb-3 mb-sm-0">
@@ -123,7 +123,7 @@
           <div class="d-flex px-3">
             <div class="pl-4">
               <h4 class="display-3">Điểm đặc biệt và tính đa dạng của dịch vụ </h4>
-              <p class="">Dịch vụ vệ sinh của HSM đem tới không chỉ là sự đa dạng trong hình thức sử dụng cũng như vô số
+              <p class="">Dịch vụ vệ sinh của HMS đem tới không chỉ là sự đa dạng trong hình thức sử dụng cũng như vô số
                 tính năng để người dùng lựa chọn</p>
             </div>
           </div>
@@ -188,7 +188,7 @@
                 </div>
                 <div class="pl-4">
                   <h5 class="title text-success">Nhận thông báo và cập nhật tình hình</h5>
-                  <p>HSM luôn luôn cập nhật thông tin một cách nhanh nhất và đầy đủ nhất không chỉ về thời gian và còn
+                  <p>HMS luôn luôn cập nhật thông tin một cách nhanh nhất và đầy đủ nhất không chỉ về thời gian và còn
                     cả quá trình sử dụng dịch vụ.</p>
 
                 </div>
@@ -460,7 +460,7 @@
         <div class="col-lg-10">
           <h2 class="display-3 text-white">Phản hồi và đánh giá</h2>
           <p class="lead text-white">Sau đây là những phản hồi đánh giá chung của các khách hàng đã và đang tiếp tục sử
-            dụng dịch vụ của HSM.</p>
+            dụng dịch vụ của HMS.</p>
         </div>
       </div>
       <div class="row row-grid mt-5">
