--- a/fe/src/app/sections/home-section/home-section.component.html
+++ b/fe/src/app/sections/home-section/home-section.component.html
@@ -16,7 +16,7 @@
         </div>
         <div class="pl-4 w-50">
           <h4 class="display-3">Những dịch vụ tiện ích mà gia đình bạn cần</h4>
-          <p class="">Những dịch vụ bên HSM cung cấp luôn được đưa ra theo cấc tiêu chí cần và đủ dựa trên nhu cầu của
+          <p class="">Những dịch vụ bên HMS cung cấp luôn được đưa ra theo cấc tiêu chí cần và đủ dựa trên nhu cầu của
             từng cá nhân cho tới tập thể.</p>
         </div>
       </div>
@@ -106,7 +106,7 @@
     <div class="row mb-lg-5">
       <div class="col-lg-8">
         <h2 class="display-3">Luôn đem tới chất lượng hàng đầu</h2>
-        <p class="lead text-muted">Dựa trên các tiêu chí hàng đầu về một dịch vụ, HSM luôn tự tin đem tới cho người dùng
+        <p class="lead text-muted">Dựa trên các tiêu chí hàng đầu về một dịch vụ, HMS luôn tự tin đem tới cho người dùng
           những trải nghiệm tốt nhất.</p>
       </div>
     </div>
@@ -118,7 +118,7 @@
             <h5 class="title">
               <span class="d-block mb-1">Đa dạng dịch vụ</span>
               <small class="h6 text-muted">Với nhiều sự lựa chọn và hình thức để sử dụng dịch vụ.
-                HSM luôn sẵn sàng hỗ trợ mọi nhu cầu của khách hàng</small>
+                HMS luôn sẵn sàng hỗ trợ mọi nhu cầu của khách hàng</small>
             </h5>
 
           </div>
@@ -142,7 +142,7 @@
           <div class="pt-4">
             <h5 class="title">
               <span class="d-block mb-1">Giá cả hợp lý</span>
-              <small class="h6 text-muted">HSM đem tới cho người dùng những dịch vụ có chất lượng tốt đi kèm với
+              <small class="h6 text-muted">HMS đem tới cho người dùng những dịch vụ có chất lượng tốt đi kèm với
                 giá cả hợp lý đối với từng loại dịch vụ.
               </small>
             </h5>
@@ -251,7 +251,7 @@
           <blockquote class="card-blockquote" style="height:175px;">
             <svg preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 583 95" class="svg-bg">
             </svg>
-            <h4 class="font-weight-bold text-white" style="font-size: 24px;">Hệ thống dịch vụ HSM</h4>
+            <h4 class="font-weight-bold text-white" style="font-size: 24px;">Hệ thống dịch vụ HMS</h4>
             <p class="text-italic text-white" style="font-size: 16px;">Luôn hướng sự hài lòng của khách hàng đi kèm với sự phát triển và cải thiện dịch vụ. </p>
           </blockquote>
         </div>
@@ -263,7 +263,7 @@
           </div>
           <h3>Liên hệ và Hỗ trợ</h3>
           <p class="lead">Khi có bất kỳ thắc mắc gì về dịch vụ, bạn chỉ cần liên hệ hoặc click vào phần "Hỗ trợ", chúng tôi sẽ giải đáp cho bạn.</p>
-          <p>Phản hổi và đánh giá của khách hàng luôn là 1 sự đóng góp trong quá trình phát triển của HSM.</p>
+          <p>Phản hổi và đánh giá của khách hàng luôn là 1 sự đóng góp trong quá trình phát triển của HMS.</p>
           <a href="javascript:void(0)" class="font-weight-bold text-warning mt-5">Nhận hỗ trợ</a>
         </div>
       </div>
@@ -284,7 +284,7 @@
       <div class="col-lg-5 mb-5 mb-lg-0">
         <h1 class="text-white font-weight-light">Bạn đã sẵn sàng để
           trải nghiệm?</h1>
-        <p class="lead text-white mt-4">Đăng ký và trải nghiệm những tính năng thú vị chỉ có trên website HSM</p>
+        <p class="lead text-white mt-4">Đăng ký và trải nghiệm những tính năng thú vị chỉ có trên website HMS</p>
         <a href=""
           class="btn btn-white mt-4">Trải nghiệm ngay</a>
       </div>
