--- a/fe/src/app/booking/booking.component.html
+++ b/fe/src/app/booking/booking.component.html
@@ -110,7 +110,7 @@
                   <p class="description">Sau đây là <u (click)="showPriceList()"
                       style="font-size: 14px; font-weight: 600; cursor: pointer;">Bảng giá</u> các loại
                     hình dịch vụ tiện
-                    ích HSM cũng cấp:</p>
+                    ích HMS cũng cấp:</p>
                   <div class="extension-service">
                     <span *ngFor="let extends of priceList" class="badge badge-pill badge-primary"
                       [ngClass]="{'active': activeBadges[extends.parent.name]}" style="cursor: pointer;"
@@ -177,7 +177,7 @@
                     cũng như các tiện ích đính kèm trong đơn đăng ký</p>
                   <h6 class="text-primary text-uppercase">Nhân viên dọn dẹp</h6>
                   <p class="description mt-3">Dịch vụ được lựa chọn theo các tiêu chí liên quan tới diện tích, khu vực
-                    dọn dẹp, HSM sẽ cung cấp những người dọn dẹp thích hợp và tốt nhất tới khách hàng.<span>Người dùng
+                    dọn dẹp, HMS sẽ cung cấp những người dọn dẹp thích hợp và tốt nhất tới khách hàng.<span>Người dùng
                       cũng có thể </span><span class="action-cleaner" (click)="pickCleaner()"> <u><b>chọn người dọn
                           dẹp</b></u>
                     </span></p>
