--- a/fe/src/app/shared/footer/footer.component.html
+++ b/fe/src/app/shared/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="row row-grid align-items-center" [ngClass]="{'my-md': getPath()!=='/user-profile' && getPath()!=='/register' && getPath()!=='/login', 'mb-5':getPath()==='/user-profile' || getPath()==='/register' || getPath()==='/login'}">
       <div class="col-lg-6">
         <h3 class="text-primary font-weight-light mb-2">Cám ơn các bạn đã ghé thăm!</h3>
-        <h4 class="mb-0" style="font-size: 16px; font-weight: 300;">Hãy để HSM đồng hành cùng các bạn qua mọi dấu mốc trong cuộc sống.</h4>
+        <h4 class="mb-0" style="font-size: 16px; font-weight: 300;">Hãy để HMS đồng hành cùng các bạn qua mọi dấu mốc trong cuộc sống.</h4>
       </div>
       <div class="col-lg-6 text-lg-center btn-wrapper">
         <a target="_blank" href="https://twitter.com" class="btn btn-neutral btn-icon-only btn-twitter btn-round btn-lg" ngbTooltip="Follow us">
@@ -26,13 +26,13 @@
       <div class="col-md-6">
         <div class="copyright">
           &copy; {{test | date: 'yyyy'}}
-          <a href="" target="_blank">HSM Project</a>.
+          <a href="" target="_blank">HMS Project</a>.
         </div>
       </div>
       <div class="col-md-6">
         <ul class="nav nav-footer justify-content-end">
           <li class="nav-item">
-            <a href="" class="nav-link" target="_blank">HSM-G1 team</a>
+            <a href="" class="nav-link" target="_blank">HMS-G1 team</a>
           </li>
           <li class="nav-item">
             <a href="" class="nav-link" target="_blank">About Us</a>
